--- a/webroot/web/themes/custom/atlantiq/src/scss/base/_base.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/base/_base.scss
@@ -13,7 +13,7 @@ body {
   font-family: $font-family-body;
   font-size: $p-size;
   color: $color-black;
-  line-height: 1.6;
+  line-height: 21px;
 }
 
 // Typografie-Stile
