--- a/webroot/web/themes/custom/atlantiq/src/scss/base/_colors.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/base/_colors.scss
@@ -1,8 +1,9 @@
 // colors.scss
 
-$color-white: #f1f1f1;
+$color-light-grey: #f1f1f1;
 $color-yellow: #ffff00;
 $color-black: #000000;
+$color-light-grey-border: rgba(241, 241, 241, 0.1);
 
 // Spezifische Farben und Layout-Dimensionen
 $yellow-background: #FFFF00;
