--- a/webroot/web/themes/custom/atlantiq/src/scss/base/_mixins.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/base/_mixins.scss
@@ -15,6 +15,12 @@
 @mixin full-size-container {
   width: 100vw;
   height: 100vh;
+  border: 4px solid;
+  border-color: $color-light-grey-border;
+
+  @include respond-to(sm) {
+    height: inherit; //Für mobile Ansichten
+  }
 }
 
 @mixin apply-padding($map, $position) {
