--- a/webroot/web/themes/custom/atlantiq/templates/views/views-view-unformatted.html.twig
+++ b/webroot/web/themes/custom/atlantiq/templates/views/views-view-unformatted.html.twig
@@ -23,7 +23,7 @@
 {% for row in rows %}
   {%
     set row_classes = [
-    default_row_class ? 'views-row',
+    default_row_class ? 'person-container',
   ]
   %}
   {# Generiere eine eindeutige ID für jedes Row-Element #}
