--- a/webroot/web/themes/custom/atlantiq/src/scss/_variables.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/_variables.scss
@@ -3,7 +3,7 @@ $enable-rounded: false;
 $base-font-size: 16px;
 $h1-size: 4.0625rem; // 65pt
 $h1-size-large: 4.25rem; // 68pt
-$h1-size-small: 2rem; // Definieren Sie eine kleinere Größe für mobile Ansichten
+$h1-size-small: 2rem; // Mobile
 $h2-size: 2.8125rem; // 45pt
 $h2-size-large: 3rem; // 48pt
 $h3-size: 1.4375rem; // 23pt
