--- a/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--block-text-mitte.html.twig
+++ b/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--block-text-mitte.html.twig
@@ -4,8 +4,13 @@ Theme implementation for a paragraph type with a title and description.
 #}
 
 <div{{ attributes.addClass('paragraph', 'paragraph--type--block-text-mitte') }}>
-  {% if content.field_titelbeschriftung_mitte %}
-    <h1 id="{{ content.field_titelbeschriftung_mitte|render|striptags|trim|lower|replace({' ': '-', '_': '-', '/': '-', '\\': '-'}) }}">
+  {% set titel_id = content.field_titelbeschriftung_mitte|render|striptags|trim %}
+  {% if titel_id %}
+    <h1 id="{{ titel_id|lower|replace({' ': '-', '_': '-', '/': '-', '\\': '-'}) }}">
+      {{ content.field_titelbeschriftung_mitte }}
+    </h1>
+  {% else %}
+    <h1>
       {{ content.field_titelbeschriftung_mitte }}
     </h1>
   {% endif %}
