--- a/webroot/web/themes/custom/atlantiq/src/scss/theme.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/theme.scss
@@ -63,14 +63,10 @@
 @import "base/mixins";
 @import "base/colors";
 @import "layout/breakpoints";
-@import "base/typography";
 @import "base/base";
 @import "layout/layout";
 @import "layout/footer";
 @import "layout/nav";
-@import "theme/form";
-@import "theme/menu_main";
 @import "layout/scroll";
-@import "theme/stellen";
-@import "theme/people";
+@import "theme/button";
 
