--- a/webroot/web/themes/custom/atlantiq/templates/navigation/menu--main.html.twig
+++ b/webroot/web/themes/custom/atlantiq/templates/navigation/menu--main.html.twig
@@ -103,9 +103,11 @@
     <!-- Icon Onpage Navigation -->
     <li class="nav-item menu-level-0 icon-item">
       <a href="#logo-atlantiq" class="nav-link">
-        <img src="{{ '/' ~ active_theme_path() ~ '/themes/custom/atlantiq/img/icons/caret-circle-up-thin.svg' }}" alt="↑">
+        <img src="/themes/custom/atlantiq/img/icons/caret-circle-up-thin.svg" alt="Icon Scroll Nav">
       </a>
     </li>
   </ul>
   {% endif %}
   {% endmacro %}
+
+
