--- a/webroot/web/themes/custom/atlantiq/src/scss/base/_fonts.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/base/_fonts.scss
@@ -6,27 +6,27 @@ $font-family-body: 'DIN Next LT Pro Condensed', sans-serif;
 
 @font-face {
   font-family: 'CharterBT-Bold';
-  src: url('../../fonts/3249CF_0_0.eot');
-  src: url('../../fonts/3249CF_0_0.eot?#iefix') format('embedded-opentype'),
-  url('../../fonts/3249CF_0_0.woff2') format('woff2'),
-  url('../../fonts/3249CF_0_0.woff') format('woff'),
-  url('../../fonts/3249CF_0_0.ttf') format('truetype');
+  src: url('../../../fonts/3249CF_0_0.eot');
+  src: url('../../../fonts/3249CF_0_0.eot?#iefix') format('embedded-opentype'),
+  url('../../../fonts/3249CF_0_0.woff2') format('woff2'),
+  url('../../../fonts/3249CF_0_0.woff') format('woff'),
+  url('../../../fonts/3249CF_0_0.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'CharterBT-Roman';
-  src: url('../../fonts/3249CF_1_0.eot');
-  src: url('../../fonts/3249CF_1_0.eot?#iefix') format('embedded-opentype'),
-  url('../../fonts/3249CF_1_0.woff2') format('woff2'),
-  url('../../fonts/3249CF_1_0.woff') format('woff'),
-  url('../../fonts/3249CF_1_0.ttf') format('truetype');
+  src: url('../../../fonts/3249CF_1_0.eot');
+  src: url('../../../fonts/3249CF_1_0.eot?#iefix') format('embedded-opentype'),
+  url('../../../fonts/3249CF_1_0.woff2') format('woff2'),
+  url('../../../fonts/3249CF_1_0.woff') format('woff'),
+  url('../../../fonts/3249CF_1_0.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'CharterBT-Italic';
-  src: url('../../fonts/3249CF_2_0.eot');
-  src: url('../../fonts/3249CF_2_0.eot?#iefix') format('embedded-opentype'),
-  url('../../fonts/3249CF_2_0.woff2') format('woff2'),
-  url('../../fonts/3249CF_2_0.woff') format('woff'),
-  url('../../fonts/3249CF_2_0.ttf') format('truetype');
+  src: url('../../../fonts/3249CF_2_0.eot');
+  src: url('../../../fonts/3249CF_2_0.eot?#iefix') format('embedded-opentype'),
+  url('../../../fonts/3249CF_2_0.woff2') format('woff2'),
+  url('../../../fonts/3249CF_2_0.woff') format('woff'),
+  url('../../../fonts/3249CF_2_0.ttf') format('truetype');
 }
