--- a/webroot/web/themes/custom/atlantiq/src/scss/theme/_button.scss
+++ b/webroot/web/themes/custom/atlantiq/src/scss/theme/_button.scss
@@ -1,32 +1,15 @@
-.paragraph--type--button > .btn,
-.paragraph--type--button-externe-links- > .btn {
-  border-radius: 8px;
-  border: 1px solid $black;
-  background-color: $white;
-  margin-bottom: 60px;
+$carousel-control-width: 35px;
+$carousel-indicator-size: 6px;
 
-  transition: padding-right ease 300ms;
-
-  svg {
-    position: relative;
-    left: 0;
-    transition: left ease 300ms;
-  }
-  @include setPaddingY(8px);
-  h4 {
-    margin: 0;
-  }
+button.carousel-control-next svg
+{
+  width: $carousel-control-width;
 }
-
-.paragraph--type--button > .btn:hover,
-.paragraph--type--button-externe-links- > .btn:hover {
-  background-color: white;
-  border-color: black;
-  padding-right: 20px;
-  a {
-    color: black;
-  }
-  svg {
-    left: 8px;
-  }
+button.carousel-control-prev svg
+{
+  width: $carousel-control-width
+}
+.carousel-indicators [data-bs-target]{
+  width: $carousel-indicator-size;
+  height: $carousel-indicator-size;
 }
