--- a/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--slider.html.twig
+++ b/webroot/web/themes/custom/atlantiq/templates/paragraphs/paragraph--slider.html.twig
@@ -41,11 +41,11 @@
       {{ content }}
       {% if image_count > 1 %}
         <button class="carousel-control-prev" type="button" data-bs-target="#{{ aq_slider_id }}" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"/><circle cx="128" cy="128" r="96" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"/><polyline points="144 88 104 128 144 168" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"/></svg>
           <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#{{ aq_slider_id }}" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"/><circle cx="128" cy="128" r="96" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"/><polyline points="112 88 152 128 112 168" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"/></svg>
           <span class="visually-hidden">Next</span>
         </button>
       {% endif %}
